# QR-

./: README.md
QRS/: CMakeLists.txt  README.md  TEST_RESULTS.md
QRS/include/: decoder.h  encoder.h  fileutils.h  imageutils.h  qrutils.h
QRS/src/: decoder.cpp  encoder.cpp  fileutils.cpp  imageutils.cpp  main.cpp  qrutils.cpp
